<resources>
    <string name="app_name">Photo Monkey</string>
    <string name="description_dialog_field_hint">Add a description for the photo</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="close_button_alt">Close</string>
    <string name="edit_button_alt">Edit</string>
    <string name="upload_button_alt">Edit</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="picture_taken">Picture Taken</string>
    <string name="save_button">Save</string>
    <string name="discard_button">Discard Photo</string>
    <string name="flash_button">flash</string>
    <string name="prefs_button">Preferences</string>
    <string name="focus_button">AutoFocus</string>
    <string name="autofocus_off">MF</string>
    <string name="autofocus_on">AF</string>
    <string name="no_comment">No Comment</string>
    <string name="post_url">Post URL</string>

    <string name="scanned_text">Scanned Text</string>

    <string name="device_id_title">Device ID</string>
    <string name="device_id_description">The device ID, which will be used to create a folder to group all uploaded files together</string>

    <string name="vpn_only_title">VPN Only Upload</string>
    <string name="vpn_only_description">Controls whether files will only be uploaded when a VPN connection is active</string>

    <string name="wifi_only_title">Wi-Fi Only Upload</string>
    <string name="wifi_only_description">Controls whether files will only be uploaded when a Wi-Fi connection is active</string>
    <string name="title_activity_settings">Settings</string>

    <string name="remote_url_title">File Upload URL</string>

    <!-- User Preference Constants -->
    <string name="mdm_override_title">MDM Override</string>
    <string name="mdm_override_summary_on">Photo Monkey is controlled via MDM, but now some of the MDM settings can be overridden</string>
    <string name="mdm_override_summary_off">Photo Monkey is controlled via MDM</string>

    <string name="wifi_only_summary_on">Upload files only over Wi-Fi</string>
    <string name="wifi_only_summary_off">Upload files over Wi-Fi and Cellular</string>

    <string name="vpn_only_summary_on">Upload files only when a VPN connection is active</string>
    <string name="vpn_only_summary_off">Upload files regardless of a active VPN connection</string>


    <!-- Server Config User Preference Constants -->
    <string name="server_config_title">Server Config</string>
    <string name="sync_directories_title">Sync Directories</string>
    <string name="sync_directories_summary">The Directories to sync to the server (entries separated by a colon)</string>
    <string name="url_preference_description">URL for connecting to the Azure File Upload. This value is not needed if it is managed by the device administrator (MDM).</string>
    <string name="scan_button_title">Scan QR Code</string>
    <string name="settings">Settings</string>

</resources>
