<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:defaultValue="Not Set"
        android:description="@string/post_url"
        android:key="azure_post_url"
        android:restrictionType="string"
        android:title="@string/post_url" />

    <restriction
        android:defaultValue="UnknownDeviceId"
        android:description="@string/device_id_description"
        android:key="deviceId"
        android:restrictionType="string"
        android:title="@string/device_id_title" />

    <restriction
        android:defaultValue="true"
        android:description="@string/vpn_only_description"
        android:key="vpnOnly"
        android:restrictionType="bool"
        android:title="@string/vpn_only_title" />

    <restriction
        android:defaultValue="true"
        android:description="@string/wifi_only_description"
        android:key="wifiOnly"
        android:restrictionType="bool"
        android:title="@string/wifi_only_title" />

</restrictions>