<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/photo_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cutout_safe_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_button_alt"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_edit" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_button_alt"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_delete" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_button_alt"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_share" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/upload_button"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/upload_button_alt"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_upload" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/back_button"
            android:contentDescription="@string/back_button_alt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
